fix(toolbar): remove loading state flicker

--- a/src/components/Toolbar/Toolbar.module.css
+++ b/src/components/Toolbar/Toolbar.module.css
@@ -53,11 +53,6 @@
   margin-bottom: 0;
 }
 
-.loading {
-  opacity: 0.3;
-  justify-content: end !important;
-}
-
 .sortMenu {
   min-width: auto;
 }
